--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,12 @@
+# lyj_가이드_상단 메뉴
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
+  - title: "소개"
+    url: /about
+  - title: "블로그"
+    url: /blog/
+  - title: "Sample Posts"
+    url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
