--- a/_config.yml
+++ b/_config.yml
@@ -15,17 +15,17 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
-title                    : "Site Title"
+locale                   : "ko-KR"
+title                    : " "
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "시네틱스 (Synetics)"
+description              : "기능안전 SW 개발을 위한 ALM 구축 전문 기업"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+teaser                   : "" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+logo                     : "/assets/images/navigation_synetics_logo_animation_240x60.gif"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -228,6 +228,12 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
+  
+  
+ 
+bootstrap:
+  assets: true
+
 
 # mimic GitHub Pages with --safe
 whitelist:
@@ -275,7 +281,7 @@ compress_html:
     envs: development
 
 
-# Defaults
+# Defaults_post, page 기본 설정
 defaults:
   # _posts
   - scope:
@@ -288,3 +294,12 @@ defaults:
       comments: # true
       share: true
       related: true
+
+  # _pages                     
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+      date_format: "%Y-%m-%d"
